@@ -30,7 +30,7 @@
  This provides a debug_update preference. 
 must have debug_update enabled in prefs when started. 
 */
-/*#define DEBUG_UPDATE  */
+/*#define DEBUG_UPDATE   */
 #include "daemon.h"
 #include "utils.h"
 #include "preferences.h"
